--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
     machine: true
     steps:
       - checkout
-      - run: "gpg2 --recv-keys 409B6B1796C275462A1703113804BB82D39DC0"
+      - run: "command curl -sSL https://rvm.io/mpapis.asc | gpg --import -"
       - ruby/install:
           version: '2.7'
       - node/install:
