Update minimum Node.js version to 6.2 which is required by `yarn`
The default CircleCI machine Node.js version is 6.1.0.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,8 +13,8 @@ jobs:
       - run: "command curl -sSL https://rvm.io/mpapis.asc | gpg --import -"
       - ruby/install:
           version: '2.7'
-#      - node/install:
-#          install-yarn: true
+      - node/install:
+          version: '6.2'
       - run: "npm run setup && npm run deploy"
 
 workflows:
