--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,19 +3,17 @@ version: 2.1
 
 orbs:
   ruby: circleci/ruby@1.1.2
-  node: circleci/node@4.1.0
 
 jobs:
   build:
-    machine: true
+    docker:
+      - image: cimg/node:15.6.0
     steps:
       - checkout
       - run: "command curl -sSL https://rvm.io/mpapis.asc | gpg --import -"
       - ruby/install:
           version: '2.7'
-      - node/install:
-          node-version: '6.17.1'
-          install-yarn: true
+      - run: "node --version"
       - run: "npm run setup && npm run deploy"
 
 workflows:
