--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - ruby/install:
           version: '2.7'
       - run: "node --version"
-      - run: "sudo npm run setup && sudo npm run deploy"
+      - run: "sudo npm install -g npm@7.4.3 && sudo npm run setup && sudo npm run deploy"
 
 workflows:
   deploy-site:
