--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,10 +12,10 @@ jobs:
       - run: "command curl -sSL https://rvm.io/mpapis.asc | gpg --import -"
       - ruby/install:
           version: '2.7.2'
-      - run: "rvm --default use 2.7.2 && gem install bundler"
-      - run: "sudo apt update && sudo apt install nodejs"
-      - run: "nvm install v15.6.0 && nvm use 15.6.0"
-      - run: "npm run setup && npm run deploy"
+      - run: /bin/bash --login -c "rvm --default use 2.7.2" && gem install bundler
+      - run: sudo apt update && sudo apt install nodejs
+      - run: /bin/bash --login -c "nvm install v15.6.0" && /bin/bash --login -c "nvm use 15.6.0"
+      - run: npm run setup && npm run deploy
 
 workflows:
   deploy-site:
