Correct wrong deployment command

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
       - run: /bin/bash --login -c "rvm --default use 2.7.2" && gem install bundler
       - run: sudo apt update && sudo apt install nodejs
       - run: /bin/bash --login -c "nvm install v15.6.0"
-      - run: /bin/bash --login -c "nvm use 15.6.0 && npm run setup && ./bin/deploy"
+      - run: /bin/bash --login -c "nvm use 15.6.0 && npm run setup && npm run publish"
 
 workflows:
   deploy-site:
