Customize Chalk jekyll theme
Override the defaults. Also set up Keybase.io for identity
management.

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,9 @@
 # Mandatory settings
 
-blog_theme: light # Or use dark
-name: Chalk
+blog_theme: dark # Or use dark
+name: StrayLight - Musings from the Edge
 paginate: 25
-url: http://chalk.nielsenramon.com
-
+url: https://xirkus.github.io
 
 # Optional settings
 
@@ -17,13 +16,13 @@ scrollappear_enabled: true # Change to false to disable
 tag_nav_enabled: false # Change to true if you wish to show an additional 'tag-list' navigation below the header
 theme_toggle: false # Change to true if you wish to show an icon in the navigation for dynamic theme toggling
 social:
-  dribbble: nielsenramon # Add your Dribbble handle
+  dribbble: # Add your Dribbble handle
   facebook: # Add your Facebook handle
   flickr: # Add your Flickr handle
-  github: nielsenramon # Add your GitHub handle
+  github: xirkus # Add your GitHub handle
   linkedin: # Add your LinkedIn handle
-  twitter: nielsenramon # Add your Twitter handle
-  email: # Add your Email address
+  twitter: xirkus # Add your Twitter handle
+  email: mel.llaguno@pm.me
   bitcoin: # Add your Bitcoin link or address
   ethereum: # Add your Ethereum link or address
   gitlab: # Add your GitLab handle
@@ -32,9 +31,9 @@ social:
   discord: # Add you Discord server invitation ID
   tumblr: # Add your Tumblr handle
   bitbucket: # Add your Bitbucket handle
-  docker: # Add your Docker Hub handle
+  docker: mllaguno # Add your Docker Hub handle
   instagram: # Add your Instagram handle
-  keybase: # Add your Keybase handle
+  keybase: mllaguno # Add your Keybase handle
   medium: # Add your Medium handle
   spotify: # Add your Spotify handle
   stackoverflow: # Add your Stack Overflow ID number
