Use canonical email address

--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ social:
   github: xirkus # Add your GitHub handle
   linkedin: # Add your LinkedIn handle
   twitter: xirkus # Add your Twitter handle
-  email: mel.llaguno@pm.me
+  email: mel.llaguno@protonmail.com
   bitcoin: # Add your Bitcoin link or address
   ethereum: # Add your Ethereum link or address
   gitlab: # Add your GitLab handle
