--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,7 @@ version: 2.1
 
 orbs:
   ruby: circleci/ruby@1.1.2
+  node: circleci/node@4.1.0
 
 jobs:
   build:
@@ -12,11 +13,17 @@ jobs:
       - run: "command curl -sSL https://rvm.io/mpapis.asc | gpg --import -"
       - ruby/install:
           version: '2.7.2'
+      - node/install:
+          node-version: '15.6.0'
       - run: /bin/bash --login -c "rvm --default use 2.7.2 && gem install bundler"
-      - run: sudo apt update && sudo apt install nodejs
-      - run: /bin/bash --login -c "nvm install v15.6.0"
-      - run: /bin/bash --login -c "nvm use 15.6.0 && npm run setup"
-      - run: /bin/bash --login -c "nvm use 15.6.0 && npm run publish"
+      - run: bundle exec jekyll build
+      - run: rm -R ./_site/node_modules
+      - run: bundle exec htmlproofer ./_site --only-4xx --allow-hash-href --assume-extension --check-opengraph --url-ignore "feed.xml"
+
+#      - run: sudo apt update && sudo apt install nodejs
+#      - run: /bin/bash --login -c "nvm install v15.6.0"
+#      - run: /bin/bash --login -c "nvm use 15.6.0 && npm run setup"
+#      - run: /bin/bash --login -c "nvm use 15.6.0 && npm run publish"
 
 workflows:
   deploy-site:
