--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,7 +14,7 @@ jobs:
       - ruby/install:
           version: '2.7.2'
       - node/install:
-          node-version: '15.6.0'
+          node-version: 'v15.6.0'
       - run: /bin/bash --login -c "rvm --default use 2.7.2 && gem install bundler"
       - run: bundle exec jekyll build
       - run: rm -R ./_site/node_modules
