--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,9 +12,12 @@ jobs:
       - run:
           name: Install node@v15.6.0
           command: |
-            export NVM_DIR="/opt/circleci/.nvm" [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"
+            echo 'export NVM_DIR="/opt/circleci/.nvm"' >> $BASH_ENV
+            echo ' [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> $BASH_ENV
+            node -v
             nvm install v15.6.0
             nvm alias default v15.6.0
+            node -v
       - run: "command curl -sSL https://rvm.io/mpapis.asc | gpg --import -"
       - ruby/install:
           version: '2.7.2'
