--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,7 +16,7 @@ jobs:
       - run: "command curl -sSL https://rvm.io/mpapis.asc | gpg --import -"
       - ruby/install:
           version: '2.7.2'
-      - run: /bin/bash --login -c "rvm --default use 2.7.2 && gem install bundler"
+      - run: /bin/bash --login -c "rvm --default use 2.7.2 && gem install bundler && bundle install jekyll"
       - run: bundle exec jekyll build
       - run: rm -R ./_site/node_modules
       - run: bundle exec htmlproofer ./_site --only-4xx --allow-hash-href --assume-extension --check-opengraph --url-ignore "feed.xml"
