--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,7 +12,8 @@ jobs:
       - run: |
           echo 'export NVM_DIR="/opt/circleci/.nvm"' >> $BASH_ENV
           echo ' [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> $BASH_ENV
-      - run: nvm install v15.6.0 && nvm alias default v15.6.0 && node -v && npm install --global yarn && yarn add jquery
+      - run: nvm install v15.6.0 && nvm alias default v15.6.0 && node -v
+      - run: npm install --global yarn && yarn install --modules-folder ./_assets/yarn
       - run: "command curl -sSL https://rvm.io/mpapis.asc | gpg --import -"
       - ruby/install:
           version: '2.7.2'
