--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,6 @@ version: 2.1
 orbs:
   ruby: circleci/ruby@1.1.2
 
-
 jobs:
   build:
     machine: true
@@ -21,11 +20,11 @@ jobs:
       - run: "command curl -sSL https://rvm.io/mpapis.asc | gpg --import -"
       - ruby/install:
           version: '2.7.2'
-      - run: /bin/bash --login -c "rvm --default use 2.7.2 && gem install bundler"
-      - run: /bin/bash --login -c "npm run setup"
+      - run: rvm --default use 2.7.2 && gem install bundler
+      - run: npm run setup
       - run: git config --global user.email "${GITHUB_EMAIL}"
       - run: git config --global user.name "${GITHUB_USER}"
-      - run: /bin/bash --login -c "npm run publish"
+      - run: npm run publish
 
 workflows:
   deploy-site:
