Add exclusion for gh-page branch builds

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,4 +29,7 @@ jobs:
 workflows:
   deploy-site:
     jobs:
-      - build
+      - build:
+          filters:
+            branches:
+              ignore: gh-pages
