--- a/_config.yml
+++ b/_config.yml
@@ -78,6 +78,7 @@ plugins:
   - jekyll-assets
   - jekyll-paginate
   - jekyll-sitemap
+  - jekyll-twitter-plugin
   - jemoji
 paginate_path: /posts/page/:num/
 permalink: posts/:slug
