Remove Google Analytics Identifier (not being used)

--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ url: https://xirkus.github.io
 
 about_enabled: true # Change to true if you wish to show an icon in the navigation that redirects to the about page
 discus_identifier: straylight # Add your Disqus identifier
-ga_analytics: UA-28631876-6 # Add your GA Tracking Id
+ga_analytics: # Add your GA Tracking Id
 local_fonts: false # Change to true if you wish to use local fonts
 rss_enabled: true # Change to false if not
 scrollappear_enabled: true # Change to false to disable
