Add new StackOverflow ID

--- a/_config.yml
+++ b/_config.yml
@@ -35,7 +35,7 @@ social:
   keybase: mllaguno # Add your Keybase handle
   medium: # Add your Medium handle
   spotify: # Add your Spotify handle
-  stackoverflow: # Add your Stack Overflow ID number
+  stackoverflow: 15160382 # Add your Stack Overflow ID number
   steam: # Add your Steam handle
 
 
